Bug 1288320 - Define each keysystem string as specific identifier instead of placing some.keysystem everywhere. r=cpearce

MozReview-Commit-ID: 1bwPRhMOawu